medieval-angular/src/app/app.component.css
@import url(//db.onlinewebfonts.com/c/f3258385782c4c96aa24fe8b5d5f9782?family=Old+English+Text+MT);
.players-container {
  display: flex;
  /* or inline-flex */
  justify-content: space-between;
  height: -webkit-fill-available;
}

.item-header {
  text-align: center;
  font-size: 25px;
  font-weight: bold;
  font-family: Arial, Helvetica, sans-serif;
}

.phase-text {
  font-size: 40px;
  font-weight: bold;
}


/* CSS */
.button-7-alive {
  background-color: green;
  border: 1px solid transparent;
  border-radius: 3px;
  box-shadow: rgba(255, 255, 255, .4) 0 1px 0 0 inset;
  box-sizing: border-box;
  color: #fff;
  cursor: pointer;
  display: inline-block;
  font-family: Arial, Helvetica, sans-serif;
  font-size: 17px;
  font-weight: 400;
  line-height: 1.15385;
  margin: 2;
  outline: none;
  padding: 8px 8px;
  position: relative;
  text-align: center;
  text-decoration: none;
  user-select: none;
  -webkit-user-select: none;
  touch-action: manipulation;
  vertical-align: baseline;
  white-space: nowrap;
}

.button-7-alive:hover,
.button-7:focus {
  background-color: red;
}

.button-7-alive:focus {
  box-shadow: 0 0 0 4px rgba(0, 149, 255, .15);
}

.button-7-alive:active {
  background-color: red;
  box-shadow: none;
}

.button-7-dead {
  background-color: red;
  border: 1px solid transparent;
  border-radius: 3px;
  box-shadow: rgba(255, 255, 255, .4) 0 1px 0 0 inset;
  box-sizing: border-box;
  color: #fff;
  cursor: pointer;
  display: inline-block;
  font-family: Arial, Helvetica, sans-serif;
  font-size: 17px;
  font-weight: 400;
  line-height: 1.15385;
  margin: 2;
  outline: none;
  padding: 8px 8px;
  position: relative;
  text-align: center;
  text-decoration: none;
  user-select: none;
  -webkit-user-select: none;
  touch-action: manipulation;
  vertical-align: baseline;
  white-space: nowrap;
}

.button-7-dead:hover,
.button-7:focus {
  background-color: green;
}

.button-7-dead:focus {
  box-shadow: 0 0 0 4px rgba(0, 149, 255, .15);
}

.button-7-dead:active {
  background-color: green;
  box-shadow: none;
}

.button-7 {
  background-color: blue;
  border: 1px solid transparent;
  border-radius: 3px;
  box-shadow: rgba(255, 255, 255, .4) 0 1px 0 0 inset;
  box-sizing: border-box;
  color: #fff;
  cursor: pointer;
  display: inline-block;
  font-family: Arial, Helvetica, sans-serif;

  font-weight: 400;
  line-height: 1.15385;
  margin: 2;
  outline: none;
  padding: 8px 8px;
  position: relative;
  text-align: center;
  text-decoration: none;
  user-select: none;
  -webkit-user-select: none;
  touch-action: manipulation;
  vertical-align: baseline;
  white-space: nowrap;
}

.button-7:hover,
.button-7:focus {
  background-color: darkblue;
}

.button-7:focus {
  box-shadow: 0 0 0 4px rgba(0, 149, 255, .15);
}

.button-7:active {
  background-color: blue;
  box-shadow: none;
}

.living-players-buttons {
  display: flex;
  /* or inline-flex */
  justify-content: right;
}

.middle-container {
  text-align: center;
  width: -webkit-fill-available;
  height: -webkit-fill-available;
  /* what */
}

.chronicle-and-config {
  display: flex;
  
}

/* MessagesComponent's private CSS styles */
h2 {
  color: #A80000;
  font-family: Arial, Helvetica, sans-serif;
  font-weight: lighter;
}

.configs {
  font-family: Arial, Helvetica, sans-serif;
}

.alive {
  color: green;
}

.dead {
  color: red;
}

.iterate-button {
  position: absolute;
  bottom: 0;
  margin-bottom: 15px;
}

